--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^2.28.0",
     "react": "^18",
     "react-dom": "^18",
     "recoil": "^0.7.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.33",
+    "@types/react": "^18.0.1",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
     "typescript": "^4.5.4",
